info: add css to aside

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
     <div class="contenedor-grid">
       <header>Mi Ecommerce</header>
       <aside>
-
+        <div class="contenedor-menu">
+          <h3>Categorias</h3>
+          <ul>
+            <li><a href="#" class="liCategoria">Perfumes</a> <span class="cantidad">(13)</span></li>
+            <li><a href="#" class="liCategoria">Ropa</a> <span class="cantidad">(21)</span></li>
+            <li><a href="#" class="liCategoria">Accesorios</a> <span class="cantidad">(41)</span></li>
+            <li><a href="#" class="liCategoria">Zapatos</a> <span class="cantidad">(10)</span></li>
+          </ul>
+        </div>
       </aside>
       <main>
         <div class="container">
