info: add info and css main

--- a/index.html
+++ b/index.html
@@ -26,7 +26,40 @@
       </aside>
       <main>
         <div class="container">
-
+          <div class="tarjeta">
+            <img src="assets/img/perfume01.jpg" alt="Imagen referencial de Perfume myKingdom Color negro letras doradas">
+            <section>
+              <h3>Perfume myKingdom</h3>
+              <p>31.400</p>
+              <button>Comprar</button>
+            </section>
+          </div>
+          <div class="tarjeta">
+            <img src="assets/img/perfume02.jpg" alt="Imagen referencial de Perfume Phantom color plateado">
+            <section>
+              <h3>Perfume Phantom</h3>
+              <p>68.900</p>
+              <button>Comprar</button>
+            </section>
+          </div>
+          
+          <div class="tarjeta">
+            <img src="assets/img/shoes01.jpg" alt="Imagen referencial de Zapatos Docker color negro">
+            <section>
+              <h3>Zapatos Docker</h3>
+              <p>29.700</p>
+              <button>Comprar</button>
+            </section>
+          </div>
+          
+          <div class="tarjeta">
+            <img src="assets/img/hoodie01.jpg" alt="Imagen referencial de Poleron Puma color Rosado">
+            <section>
+              <h3>Poleron Puma</h3>
+              <p>44.700</p>
+              <button>Comprar</button>
+            </section>
+          </div>
         </div>
       </main>
       <footer>
