fix: fixed code in css and index

--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
           </div>
         </div>
       </main>
-      <footer>
-        <a href="#">@miecommerce </a>
-      </footer>
+      <footer><a href="#">@miecommerce </a></footer>
     </div>
   </body>
 </html>
